
* link:../use/manage-apps.html#tech-preview-define-an-application-using-a-kubernetes-custom-resource["Definire un'applicazione utilizzando una risorsa personalizzata"]
* link:../use/manage-buckets.html#tech-preview-manage-a-bucket-using-a-custom-resource["Definire il bucket"]
* link:../use/protect-apps.html#create-a-backup["Eseguire il backup dell'applicazione"]
* link:../use/protect-apps.html#create-a-snapshot["Creare un'istantanea"]
* link:../use/protect-apps.html#configure-a-protection-policy["Creare pianificazioni per snapshot o backup"]
* link:../use/restore-apps.html["Ripristinare un'applicazione da uno snapshot o da un backup"]




== 7 novembre 2023 (23.10.0)

[[nas-eco-backup-restore]]
.Nuove funzionalità e supporto
* *Funzionalità di backup e ripristino per applicazioni con backend di storage ontap-nas-Economy con driver-backend*: Abilita le operazioni di backup e ripristino per `ontap-nas-economy` con alcuni https://docs.netapp.com/us-en/astra-control-center-2310/use/protect-apps.html#enable-backup-and-restore-for-ontap-nas-economy-operations["semplici passaggi"^].
* *Backup immutabili*: Astra Control ora supporta https://docs.netapp.com/us-en/astra-control-center-2310/concepts/data-protection.html#immutable-backups["backup di sola lettura inalterabili"^] come livello di sicurezza aggiuntivo contro malware e altre minacce.
* *Presentazione di Astra Control Provisioner*
+
Con la release 23,10, Astra Control introduce un nuovo componente software chiamato Astra Control Provisioner, che sarà disponibile per tutti gli utenti di Astra Control con licenza. Astra Control Provivisioner offre l'accesso a un superset di funzionalità avanzate di gestione e provisioning dello storage oltre a quelle offerte da Astra Trident. Queste funzionalità sono disponibili per tutti i clienti Astra Control senza costi aggiuntivi.

+
** *Inizia con Astra Control Provisioner*