@@ -3616,12 +3616,6 @@ Astra Control provisioner viene installato automaticamente nell'ambito del proce
   <block id="0db934fe5d747898582ef7b2fe037806" category="list-text">Esegui il cloud con Cloud Volumes ONTAP e passa da on-premise</block>
   <block id="e83e31033bbd8a95537d872ec339409c" category="list-text">*Protezione backend dello storage avanzata con crittografia Kerberos 5*: È possibile migliorare la protezione dello storage<block ref="0a6b595cfc16ab1c35e55d5e4c214ee8" category="inline-link-rx"></block> per il traffico tra il cluster gestito e il back-end dello storage. Astra Control Provisioner supporta la crittografia Kerberos 5 su connessioni NFSv4,1 da cluster Red Hat OpenShift a Azure NetApp Files e volumi ONTAP on-premise</block>
   <block id="ac40c2ee060ee67bf0598e61daec4365" category="paragraph"><block ref="ac40c2ee060ee67bf0598e61daec4365" category="inline-image-macro-rx" type="image"></block></block>
-  <block id="2f2aafd7c2fcb81833aa47c5d9ab32fe" category="section-title">[Tech preview] Crea un backup pianificato degli spazi dei nomi</block>
-  <block id="765c75085cad598d9581b676be1b0e58" category="paragraph">È possibile creare un backup pianificato e automatico di uno o più namespace in un cluster. Questi flussi di lavoro vengono forniti da NetApp come file CR associati a uno script Python. Quando si configurano e installano i flussi di lavoro, i backup dello spazio dei nomi vengono creati automaticamente in base a una pianificazione scelta durante l'installazione. Puoi proteggere tutti i namespace su un cluster con il workflow completo del backup del cluster o solo alcuni namespace con il workflow di backup basato su etichetta.</block>
-  <block id="7ac3cce973f2aa843ace7b4ab0c5bb23" category="paragraph">Quando al cluster viene aggiunto un nuovo namespace o un'applicazione che rientra nell'ambito della pianificazione del backup, queste vengono automaticamente protette.</block>
-  <block id="261a331215e56ec7ab44a013797d15c5" category="paragraph-title">Esempio: Backup completo del cluster</block>
-  <block id="737358b56d0c0cdf08e1375d277d2218" category="paragraph">Ad esempio, quando si configura e installa l'intero flusso di lavoro del backup del cluster, viene eseguito periodicamente il backup di tutte le applicazioni in qualsiasi namespace, senza ulteriori interventi da parte dell'amministratore. Lo spazio dei nomi non deve esistere al momento dell'installazione del flusso di lavoro; se in futuro viene aggiunto uno spazio dei nomi, verrà protetto.</block>
-  <block id="22359a586ea8864de01cfa7e01782716" category="paragraph-title">Esempio: Backup basato su etichette</block>
   <block id="ab9b4add4c2750df9ea518f6cfe58c09" category="paragraph">Per una maggiore granularità, è possibile utilizzare il flusso di lavoro basato su etichette. Ad esempio, è possibile installare questo flusso di lavoro e dire agli utenti di applicare una delle diverse etichette a qualsiasi namespace che desiderano proteggere, a seconda del livello di protezione necessario. In questo modo, gli utenti possono creare lo spazio dei nomi con una di queste etichette e non devono inviare notifiche a un amministratore. Il nuovo namespace e tutte le applicazioni all'interno dell'IT sono protetti automaticamente.</block>
   <block id="07b045e6ed11320210f203c982fd829d" category="section-title">Creare un backup pianificato di tutti gli spazi dei nomi</block>
   <block id="8332335e5e8bddc0b81921741539149a" category="paragraph">È possibile creare un backup pianificato di tutti i namespace in un cluster utilizzando il flusso di lavoro di backup completo del cluster.</block>
@@ -3721,4 +3715,5 @@ Astra Control provisioner viene installato automaticamente nell'ambito del proce
   <block id="e84bb7e947a5b25481546110f575734a" category="list-text"><block ref="e84bb7e947a5b25481546110f575734a" category="inline-link-rx"></block></block>
   <block id="5858ee4031acd7b896faa2d3d2c1a299" category="inline-link">Documentazione Cloud Insights</block>
   <block id="2b93b48daf034e4100d00b85950e109d" category="list-text"><block ref="2b93b48daf034e4100d00b85950e109d" category="inline-link-rx"></block></block>
+  <block id="adeac59ad1862a3e0c4f40cfe863ae90" category="list-text"><block ref="adeac59ad1862a3e0c4f40cfe863ae90" category="inline-link-macro-rx"></block></block>
 </blocks>
