@@ -27,6 +27,8 @@ indexpage:
       url: "/use/manage-apps.html"
     - title: Proteggi le app
       url: "/use/protect-apps.html"
+    - title: Protezione di un intero cluster
+      url: "/use/back-up-full-cluster.html"
     - title: Clonare e migrare le applicazioni
       url: "/use/clone-apps.html"
     - title: Replica delle applicazioni su un sistema remoto
