@@ -35,6 +35,7 @@ Dopo l'installazione di link:../get-started/install-astra-connector.html["Connet
 
 * link:../use/manage-apps.html#tech-preview-define-an-application-using-a-kubernetes-custom-resource["Definire un'applicazione utilizzando una risorsa personalizzata"]
 * link:../use/manage-buckets.html#tech-preview-manage-a-bucket-using-a-custom-resource["Definire il bucket"]
+* link:../use/back-up-full-cluster.html["Protezione di un intero cluster"]
 * link:../use/protect-apps.html#create-a-backup["Eseguire il backup dell'applicazione"]
 * link:../use/protect-apps.html#create-a-snapshot["Creare un'istantanea"]
 * link:../use/protect-apps.html#configure-a-protection-policy["Creare pianificazioni per snapshot o backup"]
